--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 body {
-background-color: rgb(245, 245, 220);
+    background-color: rgb(245, 245, 220);
+    font-family: 'Courier New', monospace;
 }
 
 .float-container {
