--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .float-container {
-    border: 3px solid #fff;
+    border: 3px solid rgb(245, 245, 220);
     padding: 20px;
     display: flex;
 }
